--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -89,7 +89,7 @@
             <h2>Search</h2>
                 <ul id="srchMenu" class="switcher">
                  </ul>
-                {{>searchform_tmpl}}
+                <div id="srchFrm"></div>
            </div>
         </div>
     </script>
@@ -101,7 +101,7 @@
 		<li><a href="#search/quick" class="noreload search" title="More search parameters">quick</a></li>
         <li class="search">advanced</li>
     </script>
-    <script type="text/html" id="searchform_tmpl" class="partial">
+    <script type="text/html" id="searchform_tmpl_quick">
     <form class="searchform quick" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
     <input type="hidden" name="cityId" value="0"/>
     <div class="label">
@@ -124,8 +124,8 @@
 
     <div class="clearer"></div>
 </form>
-
-
+</script>
+ <script type="text/html" id="searchform_tmpl_advanced">
 <form class="searchform advanced" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
     <input type="hidden" name="cityId" value="0"/>
 
