--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -94,8 +94,8 @@
         <div class="container">
             <h2>Поиск</h2>
             <ul id="srchMenu" class="switcher"></ul>
+            <div id="srchFrm"></div>
         </div>
-        <span id="srchFrm"></span>
     </div>
     </script>
 
@@ -131,7 +131,7 @@
 
     <div class="label">
         <span class="label">Город</span>
-        <span class="host"><input type="text" name="city" class="dest" value="City" defValue="City" suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
+        <span class="host"><input type="text" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
             <span class="diags">Sorry, we have no offers for this city</span>
         </span>
     </div>
