Calendar (non-localized yet) added

--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -113,8 +113,8 @@
 
     <div class="label before-last">
         <span class="label">2</span>
-        <label>from <input type="text" name="dateFrom" id="dateFrom" class="date" value="22.10.2008" onchange="/*fixDate(this)*/"/></label>
-        <label>to <input type="text" name="dateTo" id="dateTo" class="date" value="24.10.2008" onchange="/*fixDate(this)*/"/></label>
+        <label>from <input type="text" name="dateFrom" id="dateFrom" class="date" value="22.04.2011" onchange="fixDate(this)"/></label>
+        <label>to <input type="text" name="dateTo" id="dateTo" class="date" value="22.04.2011" onchange="fixDate(this)"/></label>
         <span class="search_nights_num">2</span> <span class="search_nights_word">nights</span>
     </div>
 
@@ -138,8 +138,8 @@
 
     <div class="label">
         <span class="label">Dates</span>
-        <label>from <input type="text" name="advDateFrom" id="advDateFrom" class="date" value="22.10.2008" onchange="fixDate(this)"/></label>
-        <label>to <input type="text" name="advDateTo" id="advDateTo" class="date" value="24.10.2008" onchange="fixDate(this)"/></label>
+        <label>from <input type="text" name="dateFrom" id="dateFrom" class="date" value="22.04.2011" onchange="fixDate(this)"/></label>
+        <label>to <input type="text" name="dateTo" id="dateTo" class="date" value="24.04.2011" onchange="fixDate(this)"/></label>
         for <span class="search_nights_num">2</span> <span class="search_nights_word">nights</span>
     </div>
 
